crates/zakura-rpc/src/methods/tests/snapshots/get_block_subsidy_excessive_height@testnet_10.snap
---
source: crates/zakura-rpc/src/methods/tests/snapshot.rs
expression: error
---
{
  "code": -1,
  "message": "the ZIP 234 subsidy needs the parent block, which is not in the best chain; heights can be at most one block above the best chain tip"
}
